--- a/training/PackagesForBook.qmd
+++ b/training/PackagesForBook.qmd
@@ -35,21 +35,28 @@ covering all the dependencies needed in this book. It also downloads an
 extra package `diskframe` that is not a dependency of *Biomass_core*,
 but brings with it many other packages.
 
-<!--ELIOT: need to add castor deps below-->
-
 ```{r setupProject}
 #| cache: true
 #| echo: true
 #| eval: false
-install.packages("SpaDES.project", 
-                 repos = c("predictiveecology.r-universe.dev", 
-                           getOption("repos")), dependencies = TRUE)
+
+repos <- c("predictiveecology.r-universe.dev", getOption("repos"))
+install.packages(c("SpaDES.project", "reproducible"),
+                 repos = repos, dependencies = TRUE)
 
 library(SpaDES.project)
 out <- setupProject(
+  pkgList = {
+    pkgList <- reproducible::prepInputs(
+      url = "https://raw.githubusercontent.com/PredictiveEcology/PredictiveEcology.org/14-fix-webpage-build/training/R/pkgList.csv",
+      fun = "read.csv")
+    pkgList[[2]]
+    },
+  options = list(repos = repos),
+  paths = list(packagePath = .libPaths()[1])
   name = "Introduction",
   modules = "PredictiveEcology/Biomass_core@main",
-  packages = "disk.frame"
+  packages = pkgList
 )
 
 ```
