--- a/training/PackagesForBook.qmd
+++ b/training/PackagesForBook.qmd
@@ -28,10 +28,9 @@ cover this use case.
 
 If you can run the following code, then you will be able to run code in
 any of the chapters in this book. This code begins by installing
-`SpaDES.project`, `reproducible` and their dependencies, then uses
-`setupProject` to download and install a single SpaDES module
-(*Biomass-core*) and its many dependencies (over 130 packages), as well
-as a list of other R packages from GitHub to install.
+`SpaDES.project` and its dependencies, then uses
+`setupProject` to download and install a list of R packages hosted on GitHub and
+a single SpaDES module (*Biomass-core*) which has over 130 package dependencies.
 
 ```{r setupProject}
 #| cache: true
@@ -39,20 +38,21 @@ as a list of other R packages from GitHub to install.
 #| eval: false
 
 repos <- c("predictiveecology.r-universe.dev", getOption("repos"))
-install.packages(c("SpaDES.project", "reproducible"),
-                 repos = repos, dependencies = TRUE)
+install.packages("SpaDES.project", repos = repos, dependencies = TRUE)
 
 library(SpaDES.project)
 
 out <- setupProject(
-  sideEffects = "PredictiveEcology/PredictiveEcology.org@14-fix-webpage-build/training/R/pkgList.R",
+  packages = "PredictiveEcology/PredictiveEcology.org@training-book/training/R/pkgList.R",
   options = list(repos = repos),
   name = "Introduction",
   modules = "PredictiveEcology/Biomass_core@main"
 )
 ```
 
-Check `out$pkgList` to see what packages are installed.
+Note that `setupProject` will change your working directory to `./Introduction`.
+If that is not where you want to keep working, restart R and make sure you set 
+your working directory to where you want it to be (if restarting is not sufficient).
 
 ## Code explained
 
@@ -60,7 +60,7 @@ If you care to know what the code is "doing", read on.
 
 The `setupProject` call above internally uses `Require` to download and
 install any missing packages. Although the packages themselves are
-installed in a folder associated with the dummy project "Introduction"
+installed in a folder associated with the project "Introduction"
 (see `.libPaths()` after running the code), `Require` *caches* the
 downloaded package installation files in a user-accessible folder (so
 independent from any project).
