--- a/training/NewModuleIntro.qmd
+++ b/training/NewModuleIntro.qmd
@@ -42,229 +42,130 @@ code.
 
 ## Some R code to convert
 
-We will start by thinking about metadata: *What is metadata?*
-
-We can examine the following code chunk. First, we ask: what are the
-**inputs** and the **outputs**?
-
 ```{r start}
 # create some data
+x <- rnorm(10)
 y <- x + rnorm(10)
 # fit a linear model
-out <- lm(y ~ x)
+model <- lm(y ~ x)
 
 # plot the fit
-plot(out)
+plot(model)
 ```
 
-The **inputs** to this chunk are just one: the object `x`. This code
-will not work (i.e., it will cause an error) if `x` is not defined. The
-**outputs** are `y` and `out`. Both of these are created within this
-chunk.
-
-Next, *what are the package dependencies?*. We see that there are three
-functions: `rnorm`, `lm` and `plot`. We don't know what packages they
-are in, so we can find out by typing them at the R prompt. At the bottom
-of the function, it says that the function `rnorm` is in the `stats`
-package. Fortunately for us, this is a default ("base") package in R and
-it is always pre-loaded. So, nothing to do here.
-
-```{r second}
-> rnorm
-function (n, mean = 0, sd = 1) 
-...
-<environment: namespace:stats>
-```
-
-So, our metadata are:
-
--   Inputs: `x`
--   Outputs: `y`, `out`
--   Package dependencies: Base packages only
-
-We will next put them into the correct places in the new SpaDES module.
+Looking at this code above, we can imagine that the first 3 lines are conceptually 
+different -- *fit a dummy model* -- from the last line -- *visualize it*. 
+Lets put these into 2 "modules", and then run them in sequence.
 
 ## Create a module
 
-We use the `SpaDES.core` function `newModule()` to make a new module. 
+We use the `SpaDES.core` function `newModule()` to make a new module.
 
-Step 1 -- move the code to "an init event". This "init" even is a convention that SpaDES uses. A module
-must always have an "init" event.
+Step 1 -- move the code to an "init" event. This "init" even is a
+convention that SpaDES uses. A module must always have an "init" event.
+This is the only code that is "definitely run" in a module.
 
-```{r newModule}
-Require::Install("SpaDES.core", repos = c("https://predictiveecology.r-universe.dev", getOption("repos")))
-SpaDES.core::newModule(name = "My_linear_model", path = "tutos/NewModuleIntro", open = FALSE,
+```{r newModule, eval=TRUE}
+Require::Require(c("reproducible", "SpaDES.core"), repos = c("https://predictiveecology.r-universe.dev", getOption("repos")))
+
+# make a module
+nm1 <- "My_linear_model"
+modulePath <- "tutos/NewModuleIntro/NewModule"
+newModule(name = nm1, path = modulePath, open = FALSE,
+          events = list(
+            init = {
+              x <- rnorm(10)
+              y <- x + rnorm(10)
+              # fit a linear model
+              model <- lm(y ~ x)
+            }
+          ))
+```
+
+**Keeping objects**
+
+For now, we just say, *if you want to keep an object, assign it to "sim"*.
+We will explain this in much more detail later. Here, we want to keep the `model` 
+that we fit. But we don't care about the `x` and `y`. So we assign the `model` to `sim`. 
+
+```{r, eval=TRUE}
+# make a module
+SpaDES.core::newModule(name = nm1, path = modulePath, open = FALSE,
                        events = list(
                          init = {
+                           x <- rnorm(10)
                            y <- x + rnorm(10)
                            # fit a linear model
-                           out <- lm(y ~ x)
-                           
-                           # plot the fit
-                           plot(out)
+                           sim$model <- lm(y ~ x)     #  <--------- change to sim$
                          }
                        ))
 ```
 
-So far, the linear model seems still recognizable. We now 
+How would we run this "init" event? We use `simInit`, which parses the
+code (like loading a library or sourcing a function) then `spades` which
+executes it.
 
-
-
-This will create a new folder with several files in it. See
-[`?newModule`](https://rdrr.io/cran/SpaDES.core/man/newModule.html) for
-details. For now, run the above and open the `My_linear_model.R` script
-that it creates.
-
-## Module metadata
-
-Scroll down to `inputObjects` and `expectsInputs()`. We will declare `x`
-as an "input" by putting it there.
-
-```{r metadata}
-inputObjects = bindrows(
-    expectsInput(objectName = "x", objectClass = "numeric", 
-                 desc = "The inputs for the linear model", sourceURL = NA)
-  )
+```{r, eval=TRUE}
+out <- simInit(modules = nm1, paths = list(modulePath = modulePath))
+out <- spades(out)
 ```
 
-Next, scroll down to `outputObjects` and `createsOutput()`. We will
-declare `y` and `out` as "outputs" by putting them there. Don't forget
-the **comma at the end of each `createsOutput()`** as each is an
-argument to `bindrows`.
+We can look at the output:
 
 ```{r}
-outputObjects = bindrows(
-    createsOutput(objectName = "y", objectClass = "numeric", 
-                  desc = "The randomly created varible that is used as a response variable"),
-    createsOutput(objectName = "out", objectClass = "lm", 
-                  desc = "A linear model object from the equation (x ~ y)")
-  )
+out$model
 ```
 
-## Add code - the `Init` event function
-
-First, we move the first two lines of the previous code into a function.
-We will choose the `Init` function. We will discuss why bellow.
+We can also look at "what ran"... or in other words, what was our
+workflow. Of course, this will just be one "user" created event (there
+are 4 "SpaDES-created" events ... we may use them later, ignore for now)
 
 ```{r}
-Init <- function(sim) {
-  y <- x + rnorm(10)
-  out <- lm(y ~ x)
-  return(invisible(sim))
-}
+completed(out)
 ```
 
-### Sharing inputs and outputs
+We have our first "simple workflow"!  1 chunk of code :) 
 
-You may have noticed that the `Init` function template defines a
-function with a `sim` argument. This is an object we haven't learned
-about yet; we will just think of it as a list where we can put objects
-we want to share with other modules or "just keep them for later", such
-as our **inputs** and **outputs**.
+### Add a second module
 
-To share these objects, we assign them to the `sim` list using the
-normal R notation `<-`. We have to make this modification 5 times for
-every instance of our **inputs** and
-**outputs**.<!--what do you mean 5 times?-->
+Our next step is to divide the pieces into conceptual chunks. Let's now create a 
+new module for the `plot` ... a "visualization module".
+
+```{r newModule2}
+nm2 <- "visualize"
+newModule(nm2, path = modulePath, open = FALSE,
+          events = list(
+            init = {
+              plot(sim$model)
+            }
+          )
+)
+```
+
+And run both together. We name them both in the `module` argument. We are using `simInitAndSpades` 
+which is a shortcut to running the two function separately.
+```{r,eval=FALSE}
+out2 <- simInitAndSpades(module = c(nm1, nm2), paths = list(modulePath = modulePath))
+```
+
+We can look at the output again:
 
 ```{r}
-Init <- function(sim) {
-  sim$y <- sim$x + rnorm(10)
-  sim$out <- lm(sim$y ~ sim$x)
-  return(invisible(sim))
-}
+out2$model
+
+completed(out2)
 ```
 
-Now we have a module that creates two objects, `y` and `out` and puts
-them inside `sim`. This all happens in the function called `Init`
-<!--maybe unnecessary?-->
 
-Next: the `plot(out)`.
+This time, there is an extra event that happened. We now have a workflow of 2 events.
 
-## Events
 
-We can look at our 3 lines of example and think, "this is 2 steps: step
-1 fit the model and step 2 plots it". Of course, you could divide this
-up in several ways (or not at all), but we will go with this for now.
+## Next: Metadata
 
-We can call the 2 steps **events** and imagine we could run them in
-sequence... first, lets put the plotting step in a function. We will
-choose the `plotFun` function. We will also add the `sim$` because the
-`out` will come from another step and is in the `sim` "list".
+Next, we will explore a key feature of SpaDES modules: the metadata.
 
-```{r}
-plotFun <- function(sim) {
-  plot(sim$out)
-  return(invisible(sim))
-}
-```
-
-The template already has some default code that actually puts the events
-in an order without us needing to do anything. It also has a parameter
-that determines whether the plot will happen or not (`.plots`). We will
-just accept the defaults for now.
-
-## Default Values
-
-Recall, we don't have a value for `x`. This means that if you run the
-following, you will get an error:
-
-```{r}
-SpaDES.core::simInitAndSpades(modules = "My_linear_model", paths = list(modulePath = "tutos/NewModuleIntro"))
-```
-
-Just like functions in R, we can supply default values for our
-**inputs**. We put these in a function at the bottom called
-`.inputObjects`.
-
-Copy this to the module, replacing the contents of the template
-`.inputObjects` function.
-
-```{r}
-.inputObjects <- function(sim) {
-  if (!suppliedElsewhere("x", sim))
-    sim$x <- rnorm(10, mean = 20, sd = 2)
-  return(invisible(sim))
-}
-```
-
-`!suppliedElsewhere("x", sim)` will check if `x` is in `sim` and if not,
-will run the subsequent code lines (see
-[`?suppliedElsewhere`](https://rdrr.io/cran/SpaDES.core/man/suppliedElsewhere.html)).
-
-## Run the new module
-
-Now, we have **inputs** and **outputs** defined, our code has been
-places in 2 spots (events), and we have default value for `x`.
-
-```{r}
-SpaDES.core::simInitAndSpades(modules = "My_linear_model", paths = list(modulePath = "tutos/NewModuleIntro"))
-```
-
-We now have a SpaDES module that has metadata, generates random starting
-data (if the user doesn't supply an alternative), fits a linear model,
-outputs that model, and plots the fit.
-
-## Questions
-
-1.  What are some things we "gained" from putting our simple 3 lines of
-    code into a module?
-    -   We can turn off plotting easily. Set `.plotInitialTime = NA` in
-        the `simInitAndSpades` call.
-2.  What are some things we "lost"?
-    -   More complicated. (overkill for these 3 lines?)
-3.  What if we used an R package that wasn't in the base packages list?
-    -   See
-        [`?defineModule`](https://rdrr.io/cran/SpaDES.core/man/defineModule.html)
-        for all the metadata items. Specifically, see `reqdPkgs`.
-4.  What is the `sim`? See
-    [`?'.simList-class'`](https://rdrr.io/cran/SpaDES.core/man/simList-class.html)
 
 ## See also
-
-[`?expectsInput`](https://rdrr.io/cran/SpaDES.core/man/expectsInput.html),
-
-[`?createsOutput`](https://rdrr.io/cran/SpaDES.core/man/createsOutput.html),
 
 [`?simInitAndSpades`](https://rdrr.io/cran/SpaDES.core/man/simInitAndSpades.html),
 
