--- a/training/setupProject.qmd
+++ b/training/setupProject.qmd
@@ -26,7 +26,8 @@ In this section, we will start with the simplest case of two code chunks
 in sequence, and we will advance to chain together many modules and rich
 project workflows using `SpaDES.project`. We assume that readers are
 already familiar with SpaDES, namely creating and using SpaDES modules.
-If not, we encourage going through the chapters in Section @sec-spadesone.
+If not, we encourage going through the chapters in Section [SpaDES
+101](SpaDESbasics.qmd).
 
 From Chapter @sec-castorEg onwards, we show project flows with SpaDES
 modules that have been developed and used in ecological modelling and
