--- a/training/setupProject.qmd
+++ b/training/setupProject.qmd
@@ -29,8 +29,8 @@ already familiar with SpaDES, namely creating and using SpaDES modules.
 If not, we encourage going through the chapters in Section [SpaDES
 101](SpaDESbasics.qmd).
 
-From Chapter @sec-castorEg onwards, we show project flows with SpaDES
-modules that have been developed and used in ecological modelling and
-forescating, to answer both research or applied questions. We encourage
+From @sec-castorEg onwards, we show project flows with SpaDES modules
+that have been developed and used in ecological modelling and
+forecating, to answer both research or applied questions. We encourage
 readers to learn more about these models (and *modules*) from the
-documentationsources noted in the chapters.
+documentation sources noted in the chapters.
